--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>ESCOLA ARLINDO SILVESTRE</h1>
-    <h2>ALUNOS:</h2>    
+    <h2>ALUNOS: Luciano Vanin Tanck </h2>    
 </body>
 </html>
