--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>ESCOLA ARLINDO SILVESTRE</h1>
-    <h2>ALUNOS:</h2>    
+    <h2>ALUNOS:</h2>
+    <h3>JHENNYFER STEFFANI RODRIGUES DE SOUZA</h3>    
 </body>
 </html>
