--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>ESCOLA ARLINDO SILVESTRE</h1>
     <h2>ALUNOS:</h2>
     <h3>JHENNYFER STEFFANI RODRIGUES DE SOUZA</h3>
-    <h2>ALUNOS: Luciano Vanin Tanck </h2>
+    <h3>LUCIANO VANIN TANCK</h3>
 </body>
 </html>
