--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h2>ALUNOS:</h2>
     <h3>JHENNYFER STEFFANI RODRIGUES DE SOUZA</h3>
     <h3>Luciano Vanin Tanck</h3>
+    <h3>MURIEL MACHADO NERES</h3>
 </body>
 </html>
