--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h2>ALUNOS:</h2>
     <h3>JHENNYFER STEFFANI RODRIGUES DE SOUZA</h3>
     <h2>ALUNOS: Luciano Vanin Tanck </h2>
+    <h3>YARA REGINA FERREIRA</h3>
 </body>
 </html>
